--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </title>
 <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
 <link rel="stylesheet" href="stylesheets/print.css">
-<script src="http://code.jquery.com/jquery-latest.min.js"></script> 
+<script src="js/jquery.js"></script> 
 <script src="js/imageloaded.js"></script> 
 <script src="js/main.js"></script> 
 </head>
