--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <!-- -->
         <div class="header-bg"></div>
         <div class="slogan">
-            <p>蘊真巧工<br>&nbsp;&nbsp;&nbsp;神澤氣愉</p>
+            <p>蘊真巧工<br><span style="margin-top:1.1em;"></span>神懌氣愉</p>
             <p></p>
         </div>
         <div class="scroll-btn">
