--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>
     MOXXU
 </title>
-<!--<link rel="stylesheet" href="stylesheets/font-awesome.min.css">-->
+<link rel="stylesheet" href="stylesheets/font-awesome.min.css">
 <link rel="stylesheet" href="stylesheets/print.css">
 <script src="js/jquery.js"></script> 
 <script src="js/imageloaded.js"></script> 
