--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 <script src="js/jquery.js"></script> 
 <script src="js/imageloaded.js"></script> 
 <script src="js/main.js"></script> 
-   
-    <script src="//s3-ap-northeast-1.amazonaws.com/justfont-user-script/jf-37595.js"></script>
-    <script type="text/javascript">var _jf = _jf || [];_jf.push(['p','37595']);_jf.push(['_setFont','cwtexqming','css','.cwtexqming']);_jf.push(['_setFont','cwtexqming','alias','cwtexqming']);_jf.push(['_setFont','cwtexqming','weight',500]);(function(f,q,c,h,e,i,r,d){var k=f._jf;if(k.constructor===Object){return}var l,t=q.getElementsByTagName("html")[0],a=function(u){for(var v in k){if(k[v][0]==u){if(false===k[v][1].call(k)){break}}}},j=/\S+/g,o=/[\t\r\n\f]/g,b=/^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/g,g="".trim,s=g&&!g.call("\uFEFF\xA0")?function(u){return u==null?"":g.call(u)}:function(u){return u==null?"":(u+"").replace(b,"")},m=function(y){var w,z,v,u,x=typeof y==="string"&&y;if(x){w=(y||"").match(j)||[];z=t[c]?(" "+t[c]+" ").replace(o," "):" ";if(z){u=0;while((v=w[u++])){if(z.indexOf(" "+v+" ")<0){z+=v+" "}}t[c]=s(z)}}},p=function(y){var w,z,v,u,x=arguments.length===0||typeof y==="string"&&y;if(x){w=(y||"").match(j)||[];z=t[c]?(" "+t[c]+" ").replace(o," "):"";if(z){u=0;while((v=w[u++])){while(z.indexOf(" "+v+" ")>=0){z=z.replace(" "+v+" "," ")}}t[c]=y?s(z):""}}},n;k.push(["_eventActived",function(){p(h);m(e)}]);k.push(["_eventInactived",function(){p(h);m(i)}]);k.addScript=n=function(u,A,w,C,E,B){E=E||function(){};B=B||function(){};var x=q.createElement("script"),z=q.getElementsByTagName("script")[0],v,y=false,D=function(){x.src="";x.onerror=x.onload=x.onreadystatechange=null;x.parentNode.removeChild(x);x=null;a("_eventInactived");B()};if(C){v=setTimeout(function(){D()},C)}x.type=A||"text/javascript";x.async=w;x.onload=x.onreadystatechange=function(G,F){if(!y&&(!x.readyState||/loaded|complete/.test(x.readyState))){y=true;if(C){clearTimeout(v)}x.src="";x.onerror=x.onload=x.onreadystatechange=null;x.parentNode.removeChild(x);x=null;if(!F){setTimeout(function(){E()},200)}}};x.onerror=function(H,G,F){if(C){clearTimeout(v)}D();return true};x.src=u;z.parentNode.insertBefore(x,z)};a("_eventPreload");m(h);n(r,"text/javascript",false,3000)})(this,this.document,"className","jf-loading","jf-active","jf-inactive","//ds.justfont.com/js/stable/v/5.0.2/id/155130380393");</script>
 </head>
 <body>  
 <div class="wrapper">
@@ -59,6 +56,10 @@
                 </a>
             </div>
             <div class="navi-box">
+                <div class="menu-btn visible-xs">
+                    <i class="fa fa-bars"></i>
+                    <i class="fa fa-remove"></i>
+                </div>
                 <ul>
                     <a href="about.html">
                         <li>
@@ -80,7 +81,16 @@
                             <i class="fa fa-envelope"></i> 聯絡我們
                         </li>    
                     </a>
+                    <div class="visible-xs social-btns">
+                        <a href="tel:0227655674">
+                            <i class="fa fa-phone"></i>
+                        </a>
+                        <a class="fb-btn" href="https://www.facebook.com/moxxu.info/?fref=ts" target="_blank"> 
+                            <i class="fa fa-facebook"></i>
+                        </a>
+                    </div>
                 </ul>
+                
             </div>
         </div>
         
@@ -100,20 +110,26 @@
         <div class="main-container index-about-container">
             <div class="main-box">
                 <img src="images/logoblack.png" alt="">
-                <p>
+                <p class="hidden-xs">
                     百年傳承經絡疏導與遠紅外線科技的極致結合，
                 </p>
-                <p>
+                <p class="hidden-xs">
                     深層紓壓、簡易上手 、精湛工藝、能量永續
+                </p>
+                <p class="visible-xs">
+                    百年傳承經絡疏導與遠紅外線科技的極致結合，深層紓壓、簡易上手 、精湛工藝、能量永續
                 </p>
                 <h1>
                     遠紅外線的效能
                 </h1>
-                <p>
+                <p class="hidden-xs">
                     遠紅外線能促進血液循環，有效排除氣結與脈絡阻塞，
                 </p>
-                <p>
+                <p class="hidden-xs">
                     協助活化免疫系統與提昇代謝循環
+                </p>
+                <p class="visible-xs">
+                    遠紅外線能促進血液循環，有效排除氣結與脈絡阻塞，協助活化免疫系統與提昇代謝循環
                 </p>
                 <a href="about.html">
                     <div class="btn">
@@ -131,15 +147,21 @@
         <!-- 產品 -->
         <div class="index-product-zone">
             <div class="main-container index-product-container">
+                <div class="main-box visible-xs">
+                    <img src="images/07productpic.png" width="100%" alt="">
+                </div>
                 <div class="main-box">
                     <h1>
                         遠紅外線經絡疏導儀
                     </h1>
-                    <p>
+                    <p class="hidden-xs">
                         依循脈絡走向以及穴道分佈，針對人體不同區塊以及按摩手法，
                     </p>
-                    <p>
+                    <p class="hidden-xs">
                         以專利技術打造一系列遠紅外線經絡疏導儀
+                    </p>
+                    <p class="visible-xs">
+                        依循脈絡走向以及穴道分佈，針對人體不同區塊以及按摩手法，以專利技術打造一系列遠紅外線經絡疏導儀
                     </p>
                     <a href="product.html">
                         <div class="btn">
@@ -147,7 +169,7 @@
                         </div>    
                     </a>
                 </div>
-                <div class="main-box">
+                <div class="main-box hidden-xs">
 
                 </div>
             </div>
