--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
                </div>
                <div class="box">
                    <p>
-                       Tel : 886-2-27655674
+                       Tel : <a href="tel:0227655674">886-2-27655674</a>
                    </p>
                    <p>
-                       E-mail :  moxxu.info@gmail.com
+                       E-mail :  <a href="mailto:moxxu.info@gmail.com">moxxu.info@gmail.com</a>
                    </p>
                </div>
                <div class="box">
