--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
                </div>
                <div class="box">
                    <p>
-                       Tel: <a href="tel:0227655674">886-2-27655674</a>
+                       <a href="tel:0227655674">Tel: 886-2-27655674</a>
                    </p>
                    <p>
-                       E-mail: <a href="mailto:moxxu.info@gmail.com">moxxu.info@gmail.com</a>
+                       <a href="mailto:moxxu.info@gmail.com">E-mail: moxxu.info@gmail.com</a>
                    </p>
                </div>
                <div class="box">
