--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
     </div>
     <!-- main -->
     <div class="main-section">
-        <div class="section-menu">
+        <div class="section-menu hidden-xs">
             <ul>
                 <li>
                     品牌介紹
@@ -122,24 +122,23 @@
                     產品效能
                 </li>
             </ul>
-            <div class="main-container">
-                <div class="main-box">
-                    <h1>
-                        魔可舒，經絡疏導的專家
-                    </h1>
-                    <hr>
-                    <p>
-                        進入現代禪風意境，體驗怡人自在能量
-                    </p>
-                    <a href="conceptstore.html">
-                        <div class="btn">
-                            店面資訊 <i class="fa fa-angle-right"></i>
-                        </div>    
-                    </a>
-                </div>
+        </div>
+        <div class="main-container">
+            <div class="main-box">
+                <h1>
+                    魔可舒，經絡疏導的專家
+                </h1>
+                <hr>
+                <p>
+                    進入現代禪風意境，體驗怡人自在能量
+                </p>
+                <a href="conceptstore.html">
+                    <div class="btn">
+                        店面資訊 <i class="fa fa-angle-right"></i>
+                    </div>    
+                </a>
             </div>
         </div>
-        
     </div>
     <!-- footer -->
     <div class="footer">
