--- a/about.html
+++ b/about.html
@@ -107,36 +107,42 @@
     </div>
     <!-- main -->
     <div class="main-section">
-        <div class="section-menu hidden-xs">
-            <ul>
-                <li>
-                    品牌介紹
-                </li>
-                <li>
-                    產品特色
-                </li>
-                <li>
-                    遠紅外線特點
-                </li>
-                <li>
-                    產品效能
-                </li>
-            </ul>
-        </div>
         <div class="main-container">
+            <div class="section-menu hidden-xs">
+                <ul>
+                    <li>
+                        品牌介紹
+                    </li>
+                    <li>
+                        產品特色
+                    </li>
+                    <li>
+                        遠紅外線特點
+                    </li>
+                    <li>
+                        產品效能
+                    </li>
+                </ul>
+            </div>
             <div class="main-box">
                 <h1>
-                    魔可舒，經絡疏導的專家
+                    魔可舒<span class="hidden-xs">，</span><div class="visible-xs"></div>經絡疏導的專家
                 </h1>
                 <hr>
-                <p>
-                    進入現代禪風意境，體驗怡人自在能量
+                <p class="visible-xs">
+                    以獨創遠紅外線礦晶體「宙元石」製成之專利經絡疏導儀，
+                    能有效依循人體經穴脈絡深層疏通，加強氣血循環、袪除脈絡阻塞。
+                    操作方式簡易好上手，輕鬆達到身心健康之功效。
                 </p>
-                <a href="conceptstore.html">
-                    <div class="btn">
-                        店面資訊 <i class="fa fa-angle-right"></i>
-                    </div>    
-                </a>
+                <p class="hidden-xs">
+                    以獨創遠紅外線礦晶體「宙元石」製成之專利經絡疏導儀，
+                </p>
+                <p class="hidden-xs">
+                    能有效依循人體經穴脈絡深層疏通，加強氣血循環、袪除脈絡阻塞。
+                </p>
+                <p class="hidden-xs">
+                    操作方式簡易好上手，輕鬆達到身心健康之功效。 
+                </p>
             </div>
         </div>
     </div>
