--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="main-box">
+            <div class="main-box about-brand">
                 <h1>
                     魔可舒<span class="hidden-xs">，</span><div class="visible-xs"></div>經絡疏導的專家
                 </h1>
@@ -143,6 +143,26 @@
                 <p class="hidden-xs">
                     操作方式簡易好上手，輕鬆達到身心健康之功效。 
                 </p>
+            </div>
+        </div>
+        <div class="main-container about-prouct">
+            <div class="main-box">
+                <h1>
+                    產品特色
+                </h1>
+                <hr>
+                <p>
+                    專利設計外型不僅提供舒適貼合的抓握手感，並能給予省力而有效的施力支點讓疏導力道深層導入經絡；同時結合天然遠紅外線活絡氣血循環，將整體成效提升至極致境界。
+                </p>
+            </div>
+            <div class="product item1">
+                <img src="images/05product_smallfish.png" alt="">
+            </div>
+            <div class="product item2">
+                <img src="images/07product_batsua.png" alt="">
+            </div>
+            <div class="product item3">
+                <img src="images/06product_dousou.png" alt="">
             </div>
         </div>
     </div>
