--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
             </div>
             <div class="main-box about-brand">
                 <h1>
-                    魔可舒<span class="hidden-xs">，</span><div class="visible-xs"></div>經絡疏導的專家
+                    魔可舒<span>，</span><div class="visible-xs"></div>經絡疏導的專家
                 </h1>
                 <hr>
                 <p class="visible-xs">
@@ -163,6 +163,60 @@
             </div>
             <div class="product item3">
                 <img src="images/06product_dousou.png" alt="">
+            </div>
+        </div>
+        <div id="about-slider" class="main-container">
+            <div class="main-box">
+                <h1>
+                    遠紅外線的特點
+                </h1>
+                <hr>
+                <div id="sl-text1" class="slider-text">
+                   <span>
+                       01
+                   </span>
+                    <h1>
+                        共振生熱
+                    </h1>
+                    <p>
+                        與肌膚內層物質分子接觸後，產生滲透、共鳴、吸收現象；<span class="hidden-xs"></span>
+                        共振擴大進而產生熱能反應，而使深層經絡與肌肉組織溫度上升。
+                    </p>
+                </div>
+                <div id="sl-text2" class="slider-text">
+                    <span>
+                        02
+                    </span>
+                    <h1>
+                        細化分子
+                    </h1>
+                    <p>
+                        深層導入肌膚底層之後瞬間細化分子，有效排除氣結與脈絡阻塞。
+                    </p>
+                </div>
+                <div id="sl-text3" class="slider-text">
+                    <span>
+                        03
+                    </span>
+                    <h1>
+                        促進循環、幫助排毒
+                    </h1>
+                    <p>
+                        接觸後微血管同時產生擴張效果，<span class="hidden-xs"></span>
+                        能加速體內有害物質順著血液循環以及汗水一起代謝排出，<span class="hidden-xs"></span>
+                        對於慢性疾病有良好的幫助效果。
+                    </p>
+                </div>
+            </div>
+            <div id="slide1" class="slider-bg"></div>
+            <div id="slide2" class="slider-bg"></div>
+            <div id="slide3" class="slider-bg"></div>
+            <div id="slideDot">
+                <ul>
+                    <li class="active"></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
         </div>
     </div>
