--- a/about.html
+++ b/about.html
@@ -219,6 +219,17 @@
                 </ul>
             </div>
         </div>
+        <div class="main-container about-video">
+            <div class="main-box">
+                <h1>
+                    產品效能與成分
+                </h1>
+                <hr>
+                <div class="video-responsive">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/B_XJdjIDgw0" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- footer -->
     <div class="footer">
