--- a/contact.html
+++ b/contact.html
@@ -127,8 +127,8 @@
                 <p>
                     服務專線
                 </p>
-                <a class="main-tele" href="tel:0227655674">
-                    <p>
+                <a href="tel:0227655674">
+                    <p class="main-tele">
                         02-2765-5674
                     </p>
                 </a>
