--- a/contact.html
+++ b/contact.html
@@ -127,11 +127,13 @@
                 <p>
                     服務專線
                 </p>
-                <a href="tel:0227655674">
-                    <p class="main-tele">
+
+                <p>
+                    <a class="main-tele" href="tel:0227655674">
                         02-2765-5674
-                    </p>
-                </a>
+                    </a>
+                </p>
+                
                 <a href="mailto:moxxu.info@gmail.com">
                     <div class="btn">
                         寄信給我們 <i class="fa fa-angle-right"></i>
