--- a/contact.html
+++ b/contact.html
@@ -168,16 +168,16 @@
                 <div class="second-hr"></div>
                 <div class="maps">
                     <h1>
-                        高雄概念店
+                        台北辦事處 
                     </h1>
                     <p>
-                        電話 : 07-2366388
+                        電話 : 02-27655674
                     </p>
                     <p>
                         營業時間 : 10:00-19:00  週日公休
                     </p>
                     <p>
-                        店址 : 高雄市新興區七賢一路250號
+                        店址 : 台北市松山區光復南路23號2
                     </p>
                     <a target="_blank" href="https://goo.gl/maps/rQM6cVMTk7u">
                         <div class="btn">
