--- a/contact.html
+++ b/contact.html
@@ -174,10 +174,10 @@
                         電話 : 02-27655674
                     </p>
                     <p>
-                        營業時間 : 10:00-19:00  週日公休
+                        營業時間 : 週一到週五10:00到18:00
                     </p>
                     <p>
-                        店址 : 台北市松山區光復南路23號2
+                        店址 : 台北市松山區光復南路23號2樓
                     </p>
                     <a target="_blank" href="https://goo.gl/maps/rQM6cVMTk7u">
                         <div class="btn">
@@ -186,7 +186,7 @@
                     </a>
                 </div>
                 <div class="maps embed-responsive hidden-xs">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.623185989727!2d121.5563097150065!3d25.046858783966353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abc067c46325%3A0x780931698ce8297a!2zMTA15Y-w5YyX5biC5p2-5bGx5Y2A5YWJ5b6p5Y2X6LevMzPlt7c36Jmf!5e0!3m2!1szh-TW!2stw!4v1479067399408" width="100%" height="300" frameborder="0" style="border:0"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.623026793257!2d121.55582101500647!3d25.046864183966385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abc05c80859f%3A0x39a0789279480b48!2zMTA15Y-w5YyX5biC5p2-5bGx5Y2A5YWJ5b6p5Y2X6LevMjPomZ8!5e0!3m2!1szh-TW!2stw!4v1479105669366" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
