--- a/contact.html
+++ b/contact.html
@@ -114,14 +114,14 @@
                 </h1>
                 <hr>
                 <p class="visible-xs">
-                    我們接受個人購買以及大量經銷批發
-                    欲購買產品或對產品有任何疑問，歡迎與我們聯繫。
+                    欲購買產品或有任何疑問，
+                    我們可以立即為您服務
                 </p>
                 <p class="hidden-xs">
-                    我們接受個人購買以及大量經銷批發
+                    欲購買產品或有任何疑問，
                 </p>
                 <p class="hidden-xs">
-                    欲購買產品或對產品有任何疑問，歡迎與我們聯繫。
+                    我們可以立即為您服務
                 </p>
                 <div class="second-hr"></div>
                 <p>
