--- a/conceptstore.html
+++ b/conceptstore.html
@@ -115,7 +115,7 @@
                         零售環境
                     </li>
                     <li>
-                        產商教學
+                        廠商教學
                     </li>
                 </ul>
             </div>
