--- a/conceptstore.html
+++ b/conceptstore.html
@@ -111,7 +111,7 @@
         <div class="main-container concept-slider">
             <div class="section-menu hidden-xs">
                 <ul>
-                    <li>
+                    <li class="active">
                         零售環境
                     </li>
                     <li>
