--- a/contact.html
+++ b/contact.html
@@ -174,7 +174,7 @@
                         電話 : 02-27655674
                     </p>
                     <p>
-                        營業時間 : 週一到週五10:00到18:00
+                        營業時間 : 週一到週五10:00-18:00
                     </p>
                     <p>
                         店址 : 台北市松山區光復南路23號2樓
