--- a/conceptstore.html
+++ b/conceptstore.html
@@ -122,7 +122,7 @@
             <div class="main-box">
                <div>
                    <div class="slider">
-                       <div class="slider-box">
+                       <div class="slider-box first-child">
                            <ul>
                                <li>
                                    <img width="100%" src="images/04_store_retail_A.jpg" alt="">
