--- a/conceptstore.html
+++ b/conceptstore.html
@@ -121,8 +121,8 @@
             </div>
             <div class="main-box">
                <div>
-                   <div class="slider">
-                       <div class="slider-box first-child">
+                   <div class="slider first-child">
+                       <div class="slider-box">
                            <ul>
                                <li>
                                    <img width="100%" src="images/04_store_retail_A.jpg" alt="">
