--- a/product.html
+++ b/product.html
@@ -152,7 +152,7 @@
                     <p>
                         對於頭臉部、肩頸、手部等區塊提供圓潤服貼的觸感
                     </p>
-                    <a href="#">
+                    <a href="sm">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
