--- a/product.html
+++ b/product.html
@@ -134,7 +134,7 @@
                     <p>
                         精緻功能設定，可針對頭臉等經絡密集區域細緻疏導
                     </p>
-                    <a href="#">
+                    <a href="product_smallfish.html">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
