--- a/product_smallfish.html
+++ b/product_smallfish.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
 <link rel="stylesheet" href="stylesheets/print.css">
 <script src="js/jquery.js"></script> 
+    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 <script src="js/imageloaded.js"></script> 
 <script src="js/main.js"></script> 
 <script src="js/product.js"></script> 
@@ -118,7 +119,6 @@
     <div class="main-section">
         <div class="main-container product-inner">
             <div class="main-box">
-               
                 <div class="detail-box">
                     <p class="title">
                         經絡疏導系列
@@ -180,7 +180,79 @@
                         </li>
                     </ul>
                 </div>
-                
+            </div>
+        </div>
+        <div class="main-container product-video">
+            <div class="main-box clearfix">
+                <h1>
+                    產品教學
+                </h1>
+                <hr>
+                <div class="video-box">
+                    <h1>
+                        橫撥和兩短一長手法
+                    </h1>
+                    <div class="video-img">
+                        <a target="_blank" href="https://youtu.be/O_WptIi3CaY">
+                            <img src="images/product-1/video/smallfish_film01.jpg" alt="">
+                        </a>
+                        <div>
+                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-box">
+                    <h1>
+                        頭部按摩手法
+                    </h1>
+                    <div class="video-img">
+                        <a target="_blank" href="https://youtu.be/h7W1HKk8eJ0">
+                            <img src="images/product-1/video/smallfish_film02.jpg" alt="">
+                        </a>
+                        <div>
+                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-box">
+                    <h1>
+                        臉部按摩手法
+                    </h1>
+                    <div class="video-img">
+                        <a target="_blank" href="https://youtu.be/wlaBRNe1bGs">
+                            <img src="images/product-1/video/smallfish_film03.jpg" alt="">
+                        </a>
+                        <div>
+                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-box">
+                    <h1>
+                        眼部按摩手法
+                    </h1>
+                    <div class="video-img">
+                        <a target="_blank" href="https://youtu.be/RFDGVFiK_Zo">
+                            <img src="images/product-1/video/smallfish_film04.jpg" alt="">
+                        </a>
+                        <div>
+                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-box">
+                    <h1>
+                        手部按摩手法
+                    </h1>
+                    <div class="video-img">
+                        <a target="_blank" href="https://youtu.be/wTkAG90R2IM">
+                            <img src="images/product-1/video/smallfish_film05.jpg" alt="">
+                        </a>
+                        <div>
+                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
