--- a/product_fish2.html
+++ b/product_fish2.html
@@ -6,7 +6,7 @@
 <link rel="icon" href="images/favicon-48X48.ico" sizes="48*48" type="image/svg+xml">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>
-    MOXXU - 小魚壹式
+    MOXXU - 小魚貳式
 </title>
 <meta name="description" content="魔可舒 遠紅外線經絡疏導儀乃是以獨創遠紅外線礦晶體”宙元石”製成之專利經絡疏導儀，能有效依循人體經穴脈絡深層疏通，加強氣血循環、袪除脈絡阻塞。操作方式簡易好上手，輕鬆達到身心健康之功效。" />
 <meta name="keywords" itemprop="keywords" content="魔可舒,遠紅外線,經絡疏導,按摩,宙元石 " />
@@ -126,17 +126,14 @@
                         經絡疏導系列
                     </p>
                     <h1>
-                        小魚壹式
+                        小魚貳式
                     </h1>
                     <ul>
                         <li>
-                            精緻的功能設定可針對經絡密集分布的區塊一一細緻疏導，
+                            以小魚的設計基礎加以衍伸，接觸面的肌膚觸感更加服貼與圓潤。
                         </li>
                         <li>
-                            尤其對於頭部、臉部、肩頸部、手腕、手掌與手指的經絡疏通有良好效果。
-                        </li>
-                        <li>
-                            尺寸小巧方便，適合外出時隨身攜帶使用
+                            適合頭臉部的疏導以及足底經穴疏通。
                         </li>
                     </ul>
                     <table>
@@ -161,7 +158,7 @@
                                 產品規格
                             </td>
                             <td>
-                                16 x 5 (公分)
+                                17 x 4.5 (公分)
                             </td>
                         </tr>
                     </table>
@@ -171,14 +168,14 @@
                 </div>
                 <div class="img-box">
                     <div class="main-img">
-                        <img src="images/product-1/productofsmallfish.jpg" alt="">
+                        <img src="images/product-2/productofsmallfish2.jpg" alt="">
                     </div>
                     <ul>
                         <li>
-                            <img src="images/product-1/productofsmallfish.jpg" alt="">
+                            <img src="images/product-2/productofsmallfish2.jpg" alt="">
                         </li>
                         <li>
-                            <img src="images/product-1/scenarioofsmallfish.jpg" alt="">
+                            <img src="images/product-2/scenarioofsmallfish2.jpg" alt="">
                         </li>
                     </ul>
                 </div>
