UPDATE SEO AND PRODUCTS

--- a/product.html
+++ b/product.html
@@ -6,8 +6,10 @@
 <link rel="icon" href="images/favicon-48X48.ico" sizes="48*48" type="image/svg+xml">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>
-    MOXXU
+    MOXXU 魔可舒 - 產品介紹
 </title>
+    <meta name="description" content="魔可舒 遠紅外線經絡疏導儀乃是以獨創遠紅外線礦晶體”宙元石”製成之專利經絡疏導儀，能有效依循人體經穴脈絡深層疏通，加強氣血循環、袪除脈絡阻塞。操作方式簡易好上手，輕鬆達到身心健康之功效。" />
+    <meta name="keywords" itemprop="keywords" content="魔可舒,遠紅外線,經絡疏導,按摩,宙元石 " />
 <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
 <link rel="stylesheet" href="stylesheets/print.css">
 <script src="js/jquery.js"></script> 
@@ -152,7 +154,7 @@
                     <p>
                         對於頭臉部、肩頸、手部等區塊提供圓潤服貼的觸感
                     </p>
-                    <a href="sm">
+                    <a href="product_fish2.html">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
@@ -170,7 +172,7 @@
                     <p>
                         手感平穩，適合使用在大面積區塊的順氣疏理
                     </p>
-                    <a href="#">
+                    <a href="product_largefish.html">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
@@ -188,7 +190,7 @@
                     <p>
                         八支勾爪外型能輕易將力道推至經絡深層部位
                     </p>
-                    <a href="#">
+                    <a href="product_bachua.html">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
@@ -206,7 +208,7 @@
                     <p>
                         加長弧勾外型可針對肩頸、上背部、肩胛骨提供有效紓壓
                     </p>
-                    <a href="#">
+                    <a href="product_rui.html">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
@@ -224,7 +226,7 @@
                     <p>
                         特殊尖端設計可針對足底經穴疏通與臉部拉提使用
                     </p>
-                    <a href="#">
+                    <a href="product_dousao.html">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
@@ -249,7 +251,7 @@
                     <p>
                         適合作為枕頭、背部按摩以及足底經穴按摩
                     </p>
-                    <a href="#">
+                    <a href="product_dingtsu.html">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
@@ -267,7 +269,7 @@
                     <p>
                         幫助改善手部慢性疾病並促進末梢循環
                     </p>
-                    <a href="#">
+                    <a href="product_classicbracelet.html">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
@@ -285,7 +287,7 @@
                     <p>
                         可幫助改善手部慢性疾病並促進末梢循環，並以銀飾點綴
                     </p>
-                    <a href="#">
+                    <a href="product_sliverbracelet.html">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
@@ -303,7 +305,7 @@
                     <p>
                         配戴後可幫助改善腿部退化，並且促進末梢循環
                     </p>
-                    <a href="#">
+                    <a href="product_feetbracelet.html">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
@@ -321,7 +323,7 @@
                     <p>
                         配戴後能有效緩解腰酸、下背不適的問題
                     </p>
-                    <a href="#">
+                    <a href="product_belt.html">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
@@ -339,7 +341,7 @@
                     <p>
                         可紓緩肩頸肌群緊繃、酸痛與頭痛癥狀
                     </p>
-                    <a href="#">
+                    <a href="product_necklace.html">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
