--- a/product_dingtsu.html
+++ b/product_dingtsu.html
@@ -6,7 +6,7 @@
 <link rel="icon" href="images/favicon-48X48.ico" sizes="48*48" type="image/svg+xml">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>
-    MOXXU 魔可舒 - 大魚
+    MOXXU 魔可舒 - 鼎足
 </title>
 <meta name="description" content="魔可舒 遠紅外線經絡疏導儀乃是以獨創遠紅外線礦晶體”宙元石”製成之專利經絡疏導儀，能有效依循人體經穴脈絡深層疏通，加強氣血循環、袪除脈絡阻塞。操作方式簡易好上手，輕鬆達到身心健康之功效。" />
 <meta name="keywords" itemprop="keywords" content="魔可舒,遠紅外線,經絡疏導,按摩,宙元石 " />
@@ -123,14 +123,20 @@
             <div class="main-box">
                 <div class="detail-box">
                     <p class="title">
-                        經絡疏導系列
+                        生活保健系列
                     </p>
                     <h1>
-                        大魚
+                        鼎足
                     </h1>
                     <ul>
                         <li>
-                            大魚提供平穩的手感，適合運用在身體大面積區塊的順氣與疏理，例如腹部 背部、肩頸、手臂、大小腿。
+                            專利拱狀設計，作為枕頭使用可按摩肩頸並提供良好平穩的睡眠品質。
+                        </li>
+                        <li>
+                            平躺於上方能對肩頸、肩胛骨、下背部的穴道給予深層的按壓疏通。
+                        </li>
+                        <li>
+                            使用在足底按摩能有效疏導足底經穴，並幫助抑制水腫與筋膜發炎癥狀。
                         </li>
                     </ul>
                     <table>
@@ -155,7 +161,7 @@
                                 產品規格
                             </td>
                             <td>
-                                23 x 6.5 (公分)
+                                28.5 x 14.5 (公分)
                             </td>
                         </tr>
                     </table>
@@ -165,11 +171,17 @@
                 </div>
                 <div class="img-box">
                     <div class="main-img">
-                        <img src="images/product-3/productolargefish.jpg" alt="">
+                        <img src="images/product-7/productofdingtsuo.jpg" alt="">
                     </div>
                     <ul>
                         <li>
-                            <img src="images/product-3/productolargefish.jpg" alt="">
+                            <img src="images/product-7/productofdingtsuo.jpg" alt="">
+                        </li>
+                        <li>
+                            <img src="images/product-7/scenarioofdingtsuo01.jpg" alt="">
+                        </li>
+                        <li>
+                            <img src="images/product-7/scenarioofdingtsuo02.jpg" alt="">
                         </li>
                     </ul>
                 </div>
@@ -183,63 +195,11 @@
                 <hr>
                 <div class="video-box">
                     <h1>
-                        橫撥和兩短一長手法
+                        鼎足DIY手法 
                     </h1>
                     <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/O_WptIi3CaY">
-                            <img src="images/product-1/video/smallfish_film01.jpg" alt="">
-                        </a>
-                        <div>
-                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="video-box">
-                    <h1>
-                        頭部按摩手法
-                    </h1>
-                    <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/h7W1HKk8eJ0">
-                            <img src="images/product-1/video/smallfish_film02.jpg" alt="">
-                        </a>
-                        <div>
-                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="video-box">
-                    <h1>
-                        臉部按摩手法
-                    </h1>
-                    <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/wlaBRNe1bGs">
-                            <img src="images/product-1/video/smallfish_film03.jpg" alt="">
-                        </a>
-                        <div>
-                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="video-box">
-                    <h1>
-                        眼部按摩手法
-                    </h1>
-                    <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/RFDGVFiK_Zo">
-                            <img src="images/product-1/video/smallfish_film04.jpg" alt="">
-                        </a>
-                        <div>
-                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="video-box">
-                    <h1>
-                        手部按摩手法
-                    </h1>
-                    <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/wTkAG90R2IM">
-                            <img src="images/product-1/video/smallfish_film05.jpg" alt="">
+                        <a target="_blank" href="https://youtu.be/VR6U54fFReQ">
+                            <img src="images/product-7/video/dingtsu_film01.jpg" alt="">
                         </a>
                         <div>
                             觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
