--- a/product_rui.html
+++ b/product_rui.html
@@ -6,7 +6,7 @@
 <link rel="icon" href="images/favicon-48X48.ico" sizes="48*48" type="image/svg+xml">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>
-    MOXXU 魔可舒 - 大魚
+    MOXXU 魔可舒 - 如意
 </title>
 <meta name="description" content="魔可舒 遠紅外線經絡疏導儀乃是以獨創遠紅外線礦晶體”宙元石”製成之專利經絡疏導儀，能有效依循人體經穴脈絡深層疏通，加強氣血循環、袪除脈絡阻塞。操作方式簡易好上手，輕鬆達到身心健康之功效。" />
 <meta name="keywords" itemprop="keywords" content="魔可舒,遠紅外線,經絡疏導,按摩,宙元石 " />
@@ -126,11 +126,11 @@
                         經絡疏導系列
                     </p>
                     <h1>
-                        大魚
+                        如意
                     </h1>
                     <ul>
                         <li>
-                            大魚提供平穩的手感，適合運用在身體大面積區塊的順氣與疏理，例如腹部 背部、肩頸、手臂、大小腿。
+                            尖端的特殊弧度乃針對足底經穴疏通開發設計而成，亦適合使用在臉部順氣與拉提。
                         </li>
                     </ul>
                     <table>
@@ -155,7 +155,7 @@
                                 產品規格
                             </td>
                             <td>
-                                23 x 6.5 (公分)
+                                19 x 5.5 (公分)
                             </td>
                         </tr>
                     </table>
@@ -165,86 +165,13 @@
                 </div>
                 <div class="img-box">
                     <div class="main-img">
-                        <img src="images/product-3/productolargefish.jpg" alt="">
+                        <img src="images/product-5/productofrui.jpg" alt="">
                     </div>
                     <ul>
                         <li>
-                            <img src="images/product-3/productolargefish.jpg" alt="">
+                            <img src="images/product-5/productofrui.jpg" alt="">
                         </li>
                     </ul>
-                </div>
-            </div>
-        </div>
-        <div class="main-container product-video">
-            <div class="main-box clearfix">
-                <h1>
-                    產品教學
-                </h1>
-                <hr>
-                <div class="video-box">
-                    <h1>
-                        橫撥和兩短一長手法
-                    </h1>
-                    <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/O_WptIi3CaY">
-                            <img src="images/product-1/video/smallfish_film01.jpg" alt="">
-                        </a>
-                        <div>
-                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="video-box">
-                    <h1>
-                        頭部按摩手法
-                    </h1>
-                    <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/h7W1HKk8eJ0">
-                            <img src="images/product-1/video/smallfish_film02.jpg" alt="">
-                        </a>
-                        <div>
-                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="video-box">
-                    <h1>
-                        臉部按摩手法
-                    </h1>
-                    <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/wlaBRNe1bGs">
-                            <img src="images/product-1/video/smallfish_film03.jpg" alt="">
-                        </a>
-                        <div>
-                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="video-box">
-                    <h1>
-                        眼部按摩手法
-                    </h1>
-                    <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/RFDGVFiK_Zo">
-                            <img src="images/product-1/video/smallfish_film04.jpg" alt="">
-                        </a>
-                        <div>
-                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="video-box">
-                    <h1>
-                        手部按摩手法
-                    </h1>
-                    <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/wTkAG90R2IM">
-                            <img src="images/product-1/video/smallfish_film05.jpg" alt="">
-                        </a>
-                        <div>
-                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
