--- a/product_dousao.html
+++ b/product_dousao.html
@@ -6,7 +6,7 @@
 <link rel="icon" href="images/favicon-48X48.ico" sizes="48*48" type="image/svg+xml">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>
-    MOXXU 魔可舒 - 大魚
+    MOXXU 魔可舒 - 斗杓
 </title>
 <meta name="description" content="魔可舒 遠紅外線經絡疏導儀乃是以獨創遠紅外線礦晶體”宙元石”製成之專利經絡疏導儀，能有效依循人體經穴脈絡深層疏通，加強氣血循環、袪除脈絡阻塞。操作方式簡易好上手，輕鬆達到身心健康之功效。" />
 <meta name="keywords" itemprop="keywords" content="魔可舒,遠紅外線,經絡疏導,按摩,宙元石 " />
@@ -126,11 +126,14 @@
                         經絡疏導系列
                     </p>
                     <h1>
-                        大魚
+                        斗杓
                     </h1>
                     <ul>
                         <li>
-                            大魚提供平穩的手感，適合運用在身體大面積區塊的順氣與疏理，例如腹部 背部、肩頸、手臂、大小腿。
+                            加長弧勾狀外型設計可針對肩頸、上背部、肩胛骨等不易自行按摩的地方提供深層有效的紓壓效果。
+                        </li>
+                        <li>
+                            對於頭部、臉部、腋下淋巴、腿部區域的疏通效果亦相當良好。
                         </li>
                     </ul>
                     <table>
@@ -155,7 +158,7 @@
                                 產品規格
                             </td>
                             <td>
-                                23 x 6.5 (公分)
+                                29.5 x 5.5 (公分)
                             </td>
                         </tr>
                     </table>
@@ -165,11 +168,17 @@
                 </div>
                 <div class="img-box">
                     <div class="main-img">
-                        <img src="images/product-3/productolargefish.jpg" alt="">
+                        <img src="images/product-6/productofdousao.jpg" alt="">
                     </div>
                     <ul>
                         <li>
-                            <img src="images/product-3/productolargefish.jpg" alt="">
+                            <img src="images/product-6/productofdousao.jpg" alt="">
+                        </li>
+                        <li>
+                            <img src="images/product-6/scenarioofdousao01.jpg" alt="">
+                        </li>
+                        <li>
+                            <img src="images/product-6/scenarioofdousao02.jpg" alt="">
                         </li>
                     </ul>
                 </div>
@@ -183,63 +192,11 @@
                 <hr>
                 <div class="video-box">
                     <h1>
-                        橫撥和兩短一長手法
+                        斗杓DIY手法 
                     </h1>
                     <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/O_WptIi3CaY">
-                            <img src="images/product-1/video/smallfish_film01.jpg" alt="">
-                        </a>
-                        <div>
-                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="video-box">
-                    <h1>
-                        頭部按摩手法
-                    </h1>
-                    <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/h7W1HKk8eJ0">
-                            <img src="images/product-1/video/smallfish_film02.jpg" alt="">
-                        </a>
-                        <div>
-                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="video-box">
-                    <h1>
-                        臉部按摩手法
-                    </h1>
-                    <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/wlaBRNe1bGs">
-                            <img src="images/product-1/video/smallfish_film03.jpg" alt="">
-                        </a>
-                        <div>
-                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="video-box">
-                    <h1>
-                        眼部按摩手法
-                    </h1>
-                    <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/RFDGVFiK_Zo">
-                            <img src="images/product-1/video/smallfish_film04.jpg" alt="">
-                        </a>
-                        <div>
-                            觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="video-box">
-                    <h1>
-                        手部按摩手法
-                    </h1>
-                    <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/wTkAG90R2IM">
-                            <img src="images/product-1/video/smallfish_film05.jpg" alt="">
+                        <a target="_blank" href="https://youtu.be/ZfVkkW4jbEM">
+                            <img src="images/product-6/video/dousao_film01.jpg" alt="">
                         </a>
                         <div>
                             觀看影片 <i class="fa fa-play-circle-o" aria-hidden="true"></i>
