--- a/about.html
+++ b/about.html
@@ -132,12 +132,12 @@
                 </h1>
                 <hr>
                 <p class="visible-xs">
-                    以獨創遠紅外線礦晶體「宙元石」製成之專利經絡疏導儀，
+                    以獨創遠紅外線礦晶體「宙元石®」製成之專利經絡疏導儀，
                     能有效依循人體經穴脈絡深層疏通，加強氣血循環、袪除脈絡阻塞。
                     操作方式簡易好上手，輕鬆達到身心健康之功效。
                 </p>
                 <p class="hidden-xs">
-                    以獨創遠紅外線礦晶體「宙元石」製成之專利經絡疏導儀，
+                    以獨創遠紅外線礦晶體「宙元石®」製成之專利經絡疏導儀，
                 </p>
                 <p class="hidden-xs">
                     能有效依循人體經穴脈絡深層疏通，加強氣血循環、袪除脈絡阻塞。
