--- a/product.html
+++ b/product.html
@@ -198,24 +198,6 @@
                 </div>
                 <div class="main-box">
                     <h1>
-                        如意
-                    </h1>
-                    <hr>
-                    <div class="img-box">
-                        <img src="images/07_rui.png" alt="">    
-                    </div>
-                    <div class="second-hr"></div>
-                    <p>
-                        加長弧勾外型可針對肩頸、上背部、肩胛骨提供有效紓壓
-                    </p>
-                    <a href="product_rui.html">
-                        <div class="btn">
-                            查看商品 <i class="fa fa-angle-right"></i>
-                        </div>   
-                    </a>
-                </div>
-                <div class="main-box">
-                    <h1>
                         斗杓
                     </h1>
                     <hr>
@@ -224,9 +206,27 @@
                     </div>
                     <div class="second-hr"></div>
                     <p>
-                        特殊尖端設計可針對足底經穴疏通與臉部拉提使用
+                        加長弧勾外型可針對肩頸、上背部、肩胛骨提供有效紓壓
                     </p>
                     <a href="product_dousao.html">
+                        <div class="btn">
+                            查看商品 <i class="fa fa-angle-right"></i>
+                        </div>   
+                    </a>
+                </div>
+                <div class="main-box">
+                    <h1>
+                        如意
+                    </h1>
+                    <hr>
+                    <div class="img-box">
+                        <img src="images/07_rui.png" alt="">    
+                    </div>
+                    <div class="second-hr"></div>
+                    <p>
+                        特殊尖端設計可針對足底經穴疏通與臉部拉提使用
+                    </p>
+                    <a href="product_rui.html">
                         <div class="btn">
                             查看商品 <i class="fa fa-angle-right"></i>
                         </div>   
@@ -285,7 +285,7 @@
                     </div>
                     <div class="second-hr"></div>
                     <p>
-                        可幫助改善手部慢性疾病並促進末梢循環，並以銀飾點綴
+                        幫助改善手部慢性疾病並促進末梢循環，並以銀飾點綴
                     </p>
                     <a href="product_sliverbracelet.html">
                         <div class="btn">
@@ -339,7 +339,7 @@
                     </div>
                     <div class="second-hr"></div>
                     <p>
-                        可紓緩肩頸肌群緊繃、酸痛與頭痛癥狀
+                        紓緩肩頸肌群緊繃、酸痛與頭痛癥狀
                     </p>
                     <a href="product_necklace.html">
                         <div class="btn">
