--- a/product_dingtsu.html
+++ b/product_dingtsu.html
@@ -144,7 +144,7 @@
                                 材質
                             </td>
                             <td>
-                                遠紅外線礦晶體宙元石TM 
+                                遠紅外線礦晶體宙元石® 
                             </td>
                         </tr>
                         <tr>
