--- a/product_bachua.html
+++ b/product_bachua.html
@@ -138,7 +138,7 @@
                                 材質
                             </td>
                             <td>
-                                遠紅外線礦晶體宙元石TM 
+                                遠紅外線礦晶體宙元石® 
                             </td>
                         </tr>
                         <tr>
