--- a/conceptstore.html
+++ b/conceptstore.html
@@ -127,19 +127,19 @@
                        <div class="slider-box">
                            <ul>
                                <li>
-                                   <img width="100%" src="images/04_store_retail_A.jpg" alt="">
+                                   <img width="100%" src="images/store_retail_A.jpg" alt="">
                                </li>
                                <li>
-                                   <img width="100%" src="images/05_store_retail_B.jpg" alt="">
+                                   <img width="100%" src="images/store_retail_B.jpg" alt="">
                                </li>
                                <li>
-                                   <img width="100%" src="images/06_store_retail_C.jpg" alt="">
+                                   <img width="100%" src="images/store_retail_C.jpg" alt="">
                                </li>
                                <li>
-                                   <img width="100%" src="images/07_store_retail_D.jpg" alt="">
+                                   <img width="100%" src="images/store_retail_D.jpg" alt="">
                                </li>
                                <li>
-                                   <img width="100%" src="images/08_store_retail_E.jpg" alt="">
+                                   <img width="100%" src="images/store_retail_E.jpg" alt="">
                                </li>
                            </ul>
                        </div>
@@ -164,16 +164,16 @@
                        <div class="slider-box">
                            <ul>
                                <li>
-                                   <img width="100%" src="images/09_store_edu_A.jpg" alt="">
+                                   <img width="100%" src="images/store_edu_A.jpg" alt="">
                                </li>
                                <li>
-                                   <img width="100%" src="images/10_store_edu_B.jpg" alt="">
+                                   <img width="100%" src="images/store_edu_B.jpg" alt="">
                                </li>
                                <li>
-                                   <img width="100%" src="images/11_store_edu_C.jpg" alt="">
+                                   <img width="100%" src="images/store_edu_C.jpg" alt="">
                                </li>
                                <li>
-                                   <img width="100%" src="images/12_store_edu_D.jpg" alt="">
+                                   <img width="100%" src="images/store_edu_D.jpg" alt="">
                                </li>
                            </ul>
                        </div>
