--- a/product_classicbracelet.html
+++ b/product_classicbracelet.html
@@ -21,7 +21,7 @@
 <body class="dats4">  
 <div class="report-box">
     <div>
-        <img src="images/redraydoc.png" alt="">    
+        <img src="images/redraydoc.jpg" alt="">    
         <div class="remove-btn">
             <i class="fa fa-times"></i>
         </div>
