--- a/product.html
+++ b/product.html
@@ -236,7 +236,7 @@
         </div>
         <div style="padding-bottom:80px" class="main-container product-container">
             <div class="product-header sec-2">
-                經絡疏導系列
+                生活保健系列
             </div>
             <div class="group clearfix">
                 <div class="main-box">
